# os_utils

./: LICENSE.txt  README.md  os_utils-0.0.1-py3-none-any.whl  pyproject.toml
src/os_utils/: __about__.py  __init__.py  os_utils.py
tests/: __init__.py
