[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "os-utils"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "LThomps", email = "luke.a.thompson3@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/LThomps/os-utils#readme"
Issues = "https://github.com/LThomps/os-utils/issues"
Source = "https://github.com/LThomps/os-utils"

[tool.hatch.version]
path = "src/os_utils/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/os_utils tests}"

[tool.coverage.run]
source_pkgs = ["os_utils", "tests"]
branch = true
parallel = true
omit = [
  "src/os_utils/__about__.py",
]

[tool.coverage.paths]
os_utils = ["src/os_utils", "*/os-utils/src/os_utils"]
tests = ["tests", "*/os-utils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
